# omni

./: .gitignore  .gitmodules  .rustfmt.toml  404.html  CHANGELOG.md  CHANGELOG.root.md  Cargo.toml  Cross.toml  LICENSE  README.md  _astro-internal_middleware.mjs  biome.json  cog.toml  docs.html  generator-0.1.0.json  generator-0.11.0.json  generator-0.13.0.json  generator-0.4.26.json  generator-0.4.28.json  generator-0.4.29.json  generator-0.4.31.json  generator-0.4.32.json  generator-0.4.33.json  generator-0.4.7.json  generator-0.6.0.json  generator-0.6.1.json  generator-0.6.2.json  generator-0.8.0.json  index.html  knope.toml  manifest_BUbQuL4m.mjs  package.json  project-0.13.0.json  project-0.2.0.json  project-0.4.0.json  project-0.4.11.json  project-0.4.12.json  project-0.4.15.json  project-0.4.20.json  project-0.4.21.json  (+19 more)
cli/omni/: CHANGELOG.md  Cargo.toml  project.omni.yaml
cli/omni/benches/: omni_benchmarks.rs
cli/omni/src/: lib.rs  main.rs
cli/omni/test_fixtures/: .env.project.local  .env.root.local  base-1.omni.yaml  base-2.omni.yaml  project-1.omni.yaml  project-2.omni.yaml  project-3.omni.yaml
crates/bridge_rpc/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/bridge_rpc/src/: lib.rs  transport.rs
crates/bridge_rpc/tests/: integration.rs
crates/bridge_rpc_router/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/bridge_rpc_router/src/: error.rs  handler.rs  handler_error.rs  lib.rs  router.rs  service_fn.rs
crates/bridge_rpc_runner/: Cargo.toml
crates/bridge_rpc_runner/src/: error.rs  lib.rs  pool.rs  runner.rs  runtime.rs  vendor.rs
crates/bridge_rpc_services/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/bridge_rpc_services/src/: lib.rs
crates/bridge_rpc_utils/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/bridge_rpc_utils/src/: error.rs  lib.rs
crates/clap_declspec/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/clap_declspec/src/: convert.rs  lib.rs  types.rs
crates/clap_utils/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/clap_utils/src/: lib.rs
crates/config_utils/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/config_utils/src/: dict_config.rs  dyn_value.rs  lib.rs  list_config.rs  newtype.rs  option.rs  replace.rs  traits.rs
crates/dir_walker/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/dir_walker/src/: dir_entry.rs  dir_walker.rs  lib.rs  metadata.rs
crates/env/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/env/benches/: env_benchmarks.rs
crates/env/src/: config.rs  error.rs  lib.rs
crates/env_loader/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/env_loader/src/: cache.rs  error.rs  lib.rs  sys.rs  test_utils.rs
crates/env_loader/test_fixtures/: .env.nested  .env.root
crates/env_loader/tests/: cache_integration.rs
crates/js_runtime/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/js_runtime/src/: error.rs  js_runtime.rs  lib.rs  runner.rs  sys.rs  vendor.rs
crates/maps/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/maps/src/: lib.rs
crates/omni_api/: Cargo.toml  project.omni.yaml
crates/omni_api/src/: api.rs  error.rs  lib.rs  setup_guard.rs
crates/omni_api/tests/: integration.rs
crates/omni_bench/: Cargo.toml  project.omni.yaml
crates/omni_bench/benches/: task_execution.rs
crates/omni_bench/scripts/: analyze-perf.ts
crates/omni_bench/src/: harness.rs  lib.rs  matrix.rs
crates/omni_cache/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_cache/src/: exts.rs  lib.rs
crates/omni_cache/test_fixtures/: logs.txt
crates/omni_capabilities/: Cargo.toml  project.omni.yaml
crates/omni_capabilities/src/: base.rs  error.rs  eval.rs  json_schema.rs  lib.rs  matching.rs  model.rs  policy_config.rs  profile.rs
crates/omni_capability_enforcement/: Cargo.toml  project.omni.yaml
crates/omni_capability_enforcement/src/: appcontainer_sandbox.rs  backend.rs  broker.rs  deno.rs  error.rs  landlock_sandbox.rs  lib.rs  lower.rs  node.rs  null.rs  plan.rs  platform.rs  seatbelt_sandbox.rs  shim.rs  spawn.rs
crates/omni_capability_enforcement/tests/: deno_spawn.rs  landlock_spawn.rs
crates/omni_capability_sys/: Cargo.toml  project.omni.yaml
crates/omni_capability_sys/src/: authorize.rs  env.rs  lib.rs  sys.rs
crates/omni_cli_core/: CHANGELOG.md  Cargo.toml  build.rs  project.omni.yaml
crates/omni_cli_core/src/: lib.rs  subscriber.rs  task_output_capture.rs
crates/omni_cli_core/test_fixtures/: .env.project-2  .gitignore  base-2.omni.yaml  project-1.omni.yaml  project-3.omni.yaml  workspace.omni.yaml
crates/omni_collector/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_collector/src/: collector.rs  error.rs  lib.rs
crates/omni_command_config/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_command_config/src/: command_config.rs  lib.rs  resolve.rs
crates/omni_config_types/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_config_types/src/: lib.rs  maybe_expr.rs  single_or_many.rs  tera_expr.rs  tera_expr_boolean.rs
crates/omni_context/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_context/benches/: omni_context_benchmarks.rs
crates/omni_context/src/: config.rs  constants.rs  context.rs  env_loader.rs  error.rs  extracted_data_validator.rs  lib.rs  loaded_context.rs  maybe_loaded.rs  project_config_loader.rs  project_data_extractor.rs  project_discovery.rs  project_hasher.rs  project_query.rs  sys.rs  test_fixture.rs  utils.rs  workspace_hasher.rs
crates/omni_context/test_fixtures/: .env.nested.local  base-1.omni.yaml  project-1.omni.yaml  project-2.omni.yaml
crates/omni_core/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_core/src/: core_types.rs  extension_graph.rs  lib.rs  project_graph.rs  task_execution_graph.rs  task_graph.rs
crates/omni_discovery/: Cargo.toml  project.omni.yaml
crates/omni_discovery/src/: discovery.rs  error.rs  lib.rs
crates/omni_execution_plan/: CHANGELOG.md  Cargo.toml  project.omni.yaml
crates/omni_execution_plan/src/: call.rs  filter.rs  (+4 more)
crates/omni_expressions/: CHANGELOG.md  Cargo.toml  project.omni.yaml
(+1211 files in other folders)
