[workspace]
resolver = "3"
members = [
    "cli/omni",
    "crates/*",
    "services/omni_remote_cache_service",
    "services/omni_bridge_test_service",
]
# default-members = ["cli/omni"]

[workspace.package]
homepage = "https://github.com/omni-oss/omni"
license = "MIT"
repository = "https://github.com/omni-oss/omni"
keywords = []
readme = "README.md"
documentation = "https://docs.rs/omni"
description = "A build system for the modern age"
categories = []
rust-version = "1.96.0"
edition = "2024"
version = "0.17.1"
authors = ["Clarence Manuel <rencedm112@gmail.com>"]

[workspace.dependencies]
serde = { version = "^1.0.228", features = ["derive", "rc", "alloc"] }
serde-untagged = { version = "^0.1.9" }
serde_path_to_error = { version = "^0.1.20" }
sys_traits = { version = "^0.1.28", features = ["real"] }
system_traits = { path = "./crates/system_traits" }
async-trait = { version = "^0.1.89" }
serde_json = { version = "^1.0.150" }
serde_bytes = { version = "^0.11.19" }
trace = { path = "./crates/trace" }
tracing = { version = "^0.1.44" }
tracing-log = { version = "^0.2.0" }
tracing-core = { version = "^0.1.36" }
tracing-subscriber = { version = "^0.3.23", features = ["json"] }
tracing-serde = { version = "^0.2.0" }
test-log = { version = "=0.2.20", default-features = false, features = ["trace"] }
futures = { version = "^0.3.32" }
thiserror = "^2.0.18"
eyre = "^0.6.12"
color-eyre = "^0.6.5"
# pin this for now, it's causing a coherence conflict with other crates
time = { version = "^0.3.49", features = ["serde", "serde-human-readable"] }
derive_more = { version = "^2.1.1", features = ["full"] }
derive-new = { version = "^0.7.0" }
strum = { version = "^0.28.0", features = ["derive"] }
merge = { version = "0.2.0" }
tokio = { version = "^1.52.3", features = [
    "rt",
    "rt-multi-thread",
    "tracing",
    "sync",
    "fs",
    "net",
    "socket2",
    "time",
    "macros",
    "process",
    "io-std",
    "io-util",
] }
tokio-stream = { version = "^0.1.18", features = ["full"] }
tokio-util = { version = "^0.7.18", features = ["compat"] }
rayon = { version = "^1.12.0" }
reqwest = { version = "^0.13.3", features = [
    "charset",
    "blocking",
    "rustls",
    "http2",
    "json",
], default-features = false }
reqwest-middleware = { version = "^0.5.2" }
reqwest-tracing = { version = "^0.7.1" }
http = { version = "^1.4.0" }
http-body = { version = "^1.0.1" }
http-body-util = { version = "^0.1.3" }
percent-encoding = { version = "^2.3.2" }
clap = { version = "^4.6.1", features = ["derive", "env", "string"] }
clap_complete = { version = "^4.6.5" }
globset = { version = "^0.4" }
shadow-rs = { version = "^2.0.0", default-features = false }
embed-manifest = { version = "^1.3" }
convert_case = { version = "^0.11.0" }
schemars = { version = "^1.2.1", features = ["indexmap2", "either1", "url2"] }
walkdir = { version = "^2.5.0" }
noyalib = { version = "^0.0.12" }
ignore = { version = "^0.4.25" }
regex = { version = "^1.12.3" }
lazy-regex = { version = "^3.6.0" }
env = { path = "./crates/env" }
env_loader = { path = "./crates/env_loader" }
petgraph = { version = "^0.8.3", features = ["serde-1", "rayon"] }
omni_core = { path = "./crates/omni_core" }
config_utils = { path = "./crates/config_utils" }
js_runtime = { path = "./crates/js_runtime" }
toml = { version = "^1.1.2" }
uuid = { version = "^1.23.1", features = ["v4", "v7", "serde"] }
url = { version = "^2.5.8", features = ["serde"] }
parking_lot = { version = "^0.12.5" }
bincode-next = { version = "^3.1.1", features = ["serde"] }
notify = { version = "^8.2.0" }
dir_walker = { path = "./crates/dir_walker" }
which = { version = "^8.0.2" }
tera = { version = "2.0.0" }
tera-contrib = { version = "^0.2.0", features = [
    "base64",
    "date",
    "filesize_format",
    "format",
    "json",
    "rand",
    "regex",
    "slug",
    "urlencode",
] }
omni_types = { path = "./crates/omni_types" }
rmp-serde = { version = "^1.3.1" }
rmpv = { version = "^1.3.1", features = ["with-serde"] }
defer = { version = "^0.2.1" }
mockall = { version = "^0.15.0" }
ntest = { version = "^0.9.5" }
bytes = { version = "^1.11.1" }
byteorder = { version = "^1.5.0" }
rust-embed = { version = "8.11.0", features = ["compression", "include-exclude", "deterministic-timestamps"] }
garde = { version = "^0.23.0", features = ["full"] }
os_pipe = { version = "^1.2.3" }
indexmap = { version = "^2.14.0", features = ["serde", "rayon"] }
dashmap = { version = "^6.2.1", features = ["serde", "rayon"] }
ahash = { version = "^0.8.12" }
maps = { path = "./crates/maps" }
sets = { path = "./crates/sets" }
criterion = { version = "^0.8.2", features = ["html_reports", "async_tokio"] }
dhat = { version = "^0.3.3" }
enum-map = { version = "^2.7.3" }
portable-pty = { version = "^0.9.0" }
terminal_size = { version = "^0.4.4" }
rmcp = { version = "^2.0.0", features = ["server", "macros", "transport-io"] }
rs_merkle = { version = "^1.5.0" }
omni_cache = { path = "./crates/omni_cache" }
omni_hasher = { path = "./crates/omni_hasher" }
derive_builder = { version = "^0.20.2" }
blake3 = { version = "^1.8.5" }
faster-hex = { version = "^0.10.0" }
tempfile = { version = "^3.27.0" }
bs58 = { version = "^0.5.1" }
yoke = { version = "^0.8.2", features = ["derive"] }
owo-colors = { version = "^4.3.0" }
tiny-gradient = { version = "^0.1.0" }
omni_expressions = { path = "./crates/omni_expressions" }
omni_cli_core = { path = "./crates/omni_cli_core" }
cel = { version = "^0.14.0", features = ["chrono", "json", "regex", "bytes", "structs"] }
omni_test_utils = { path = "./crates/omni_test_utils" }
crossbeam-channel = { version = "^0.5.15" }
shlex = { version = "^2.0.1" }
path-clean = { version = "^1.0.1" }
num_cpus = { version = "^1.17.0" }
omni_generator = { path = "./crates/omni_generator" }
omni_collector = { path = "./crates/omni_collector" }
omni_utils = { path = "./crates/omni_utils" }
omni_configurations = { path = "./crates/omni_configurations" }
omni_context = { path = "./crates/omni_context" }
omni_task_executor = { path = "./crates/omni_task_executor" }
bridge_rpc_router = { path = "crates/bridge_rpc_router" }
omni_config_types = { path = "crates/omni_config_types" }
log = { version = "^0.4.29", features = ["kv", "kv_serde", "kv_std"] }
omni_git_utils = { path = "crates/omni_git_utils" }
omni_lockfile = { path = "crates/omni_lockfile" }
omni_remote_source = { path = "crates/omni_remote_source" }
bridge_rpc_services = { path = "crates/bridge_rpc_services" }
bridge_rpc_utils = { path = "crates/bridge_rpc_utils" }
omni_bridge_test_service = { path = "services/omni_bridge_test_service" }
omni_messages = { path = "./crates/omni_messages" }
omni_api = { path = "./crates/omni_api" }
omni_mcp_core = { path = "crates/omni_mcp_core" }
omni_input_schema = { path = "crates/omni_input_schema" }
omni_task_output_logs = { path = "crates/omni_task_output_logs" }
# omni_bench = { path = "crates/omni_bench" }
# @anchor:new-crate
tracing-futures = { version = "^0.2.5", features = ["tokio"] }
pathdiff = { version = "^0.2.3" }
path-slash = { version = "^0.2.1" }
atty = { version = "^0.2.14" }
omni_process = { path = "./crates/omni_process" }
nix = { version = "^0.31.3" }
base64 = { version = "^0.22.1" }
clap_declspec = { path = "./crates/clap_declspec" }
getset = { version = "^0.1.6" }
either = { version = "^1.16.0", features = ["serde"] }
# Pinned to 0.30.0: ratatui 0.30.1 requires ratatui-widgets ^0.3.1, whose
# blanket `impl<T: Into<Text>> From<T>` triggers a coherence conflict with the
# `time` crate. 0.30.0 uses the working ratatui-widgets 0.3.0. Revisit once the
# upstream issue is resolved.
ratatui = { version = "^0.30.1" }
crossterm = { version = "^0.29.0" }
omni_term_ui = { path = "./crates/omni_term_ui" }
clap_utils = { path = "./crates/clap_utils" }
vte = { version = "^0.15.0" }
unicode-width = "^0.2.2" # hard requirement for ratatui
enumflags2 = { version = "^0.7.12" }
omni_tracing_subscriber = { path = "./crates/omni_tracing_subscriber" }
bytesize = { version = "^2.3.1", features = ["serde"] }
humantime = { version = "^2.3.0" }
humantime-serde = { version = "^1.1.1" }
itertools = { version = "^0.15.0" }
omni_execution_plan = { path = "./crates/omni_execution_plan" }
omni_task_context = { path = "./crates/omni_task_context" }
omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
omni_remote_cache_client = { path = "./crates/omni_remote_cache_client" }
omni_file_data_serde = { path = "./crates/omni_file_data_serde" }
omni_setup = { path = "./crates/omni_setup" }
omni_generator_configurations = { path = "./crates/omni_generator_configurations" }
omni_scm = { path = "./crates/omni_scm" }
omni_prompt = { path = "./crates/omni_prompt" }
omni_input_provider = { path = "./crates/omni_input_provider" }
omni_serde_validators = { path = "./crates/omni_serde_validators" }
omni_configuration_discovery = { path = "./crates/omni_configuration_discovery" }
omni_discovery = { path = "./crates/omni_discovery" }
omni_discovery_utils = { path = "./crates/omni_discovery_utils" }
omni_tera = { path = "./crates/omni_tera" }
axum = { version = "^0.8.9", features = ["macros", "http2", "multipart"] }
tower = { version = "^0.5.3" }
tower-http = { version = "^0.6.11", features = ["trace", "catch-panic"] }
axum-valid = { version = "^0.24.0", default-features = false, features = ["full_garde"] }
axum-extra = { version = "^0.12.6", features = [
    "async-read-body",
    "typed-header",
    "typed-routing",
    "form",
    "file-stream",
    "error-response"
] }
axum-test = { version = "^20.0.0", features = ["all"] }
validator = { version = "^0.20.0" }
aws-config = { version = "^1.8.17" }
aws-sdk-s3 = { version = "^1.133.0" }
aws-credential-types = { version = "^1.2.14" }
aws-types = { version = "^1.3.16" }
lru = { version = "^0.18.0" }
utoipa = { version = "^5.5.0", features = [
    "indexmap",
    "url",
    "time",
    "debug",
    "uuid",
    "ulid",
    "openapi_extensions",
    "repr",
    "non_strict_integers"
] }
utoipa-scalar = { version = "^0.3.0", features = ["axum"] }
omni_path_utils = { path = "./crates/omni_path_utils" }
async-stream = { version = "^0.3.6" }
flate2 = { version = "^1.1.9", features = ["zlib-rs"], default-features = false }
tar = { version = "^0.4.46" }
keyring-core = { version = "^1.0.0", features = ["sample"] }
apple-native-keyring-store = { version = "^1.0.0", features = ["keychain"] }
windows-native-keyring-store = { version = "^1.0.0" }
zbus-secret-service-keyring-store = { version = "^1.0.0", features = ["crypto-rust"] }
linux-keyutils-keyring-store = { version = "^1.0.0" }
machine-uid = { version = "^0.6.0" }
rand = { version = "^0.10.1" }
ring = { version = "^0.17.14" }
gix = { version = "^0.85.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
requestty = { version = "^0.6.3", features = ["crossterm", "smallvec", "macros"] }
value-bag = { version = "^1.12.0", features = ["serde", "error", "seq", "owned"] }
serde_validate = { path = "./crates/serde_validate" }
serde_repr = { version = "^0.1.20" }
heck = { version = "^0.5.0" }
bridge_rpc_core = { path = "./crates/bridge_rpc_core" }
sqlx = { version = "^0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "all-databases",
    "uuid",
    "time",
    "bigdecimal",
    "bstr",
    "ipnet"
] }
postcard = { version = "^1.1.3",  features = ["use-std"] }
cruet = { version = "^1.0.0" }
scopeguard = { version = "^1.2.0" }
bon = { version = "^3.9.1" }
paste = { version = "^1.0" }
rstest = { version = "^0.26.1" }
rstest_reuse = { version = "^0.7.0" }
fastrand = { version = "^2.4.1" }
directories = { version = "^6.0.0" }
target-lexicon = { version = "^0.13.5" }
interprocess = { version = "^2.4.2", features = ["tokio"] }
# nom = { version = "^8.0.0" }
macro_rules_attribute = { version = "^0.2.2" }
enumset = { version = "^1.1.13", features = ["serde", "proc-macro-crate"] }
indicatif = { version = "^0.18.4" }
comfy-table = { version = "^7.2.2", features = ["custom_styling"] }


[patch.crates-io]
# Force all dependencies asking for any version of security-framework
# to use version 3.7.0 from crates.io
security-framework = { git = "https://github.com/kornelski/rust-security-framework", tag = "v3.7.0" }

[profile.release]
incremental = true
opt-level = 3       # optimize for speed but increase binary size
codegen-units = 1   # less parallel compilation but more optimization can be done
lto = true          # can perform faster but slower compilation
strip = "debuginfo" # strip debug info from binary to reduce binary size
#debug = false
debug = "line-tables-only"
debug-assertions = false
overflow-checks = false
split-debuginfo = "packed"

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.bench-with-debug]
inherits = "bench"
debug = true

# Faster to compile than `release` but with similar performance.
[profile.release-lite]
inherits = "release"
codegen-units = 128
lto = "thin"
