[package]
name = "omni"
rust-version.workspace = true
edition.workspace = true
version = "0.9.1"
authors.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
dhat-heap = ["dep:dhat"]
enable-tracing = ["trace/enabled"]
vendored-openssl = ["omni_cli_core/vendored-openssl"]

[dependencies]
dhat = { workspace = true, optional = true }
omni_cli_core = { workspace = true }
trace = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
system_traits = { workspace = true }
omni_tracing_subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
omni_test_utils = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, features = ["default"] }
eyre = { workspace = true }
