[package]
name = "omni"
rust-version.workspace = true
edition.workspace = true
version = "0.13.0"
authors.workspace = true
repository.workspace = true

[features]
default = ["enable-tracing"]
dhat-heap = ["dep:dhat"]
enable-tracing = ["trace/enabled"]

[dependencies]
scopeguard = { workspace = true }
dhat = { workspace = true, optional = true }
omni_cli_core = { workspace = true }
omni_setup = { workspace = true }
trace = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
system_traits = { workspace = true }
omni_tracing_subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
omni_test_utils = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, features = ["default"] }
eyre = { workspace = true }
