[package]
name = "bridge_rpc"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["enable-tracing"]
enable-tracing = ["trace/enabled", "dep:tracing"]

[dependencies]
system_traits = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_repr = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
defer = { workspace = true }
strum = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
derive-new = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
mockall = { workspace = true }
parking_lot = { workspace = true }
ntest = { workspace = true }
