[package]
name = "bridge_rpc_router"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "bridge_rpc_router"
path = "src/lib.rs"
[features]
default = ["enable-tracing"]
enable-tracing = ["dep:tracing", "trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
bridge_rpc = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
