[package]
name = "bridge_rpc_runner"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version = "0.0.1"

[lib]
name = "bridge_rpc_runner"
path = "src/lib.rs"

[features]
default = ["enable-tracing", "schemars"]
enable-tracing = ["trace/enabled"]
schemars = ["dep:schemars"]

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
eyre = { workspace = true }
trace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true, optional = true }
which = { workspace = true }
rust-embed = { workspace = true, features = [
    "include-exclude",
    "deterministic-timestamps",
] }
bridge_rpc_core = { workspace = true }
bridge_rpc_router = { workspace = true }
omni_capability_enforcement = { workspace = true }
omni_utils = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
