[package]
name = "bridge_rpc_services"
rust-version.workspace = true
edition.workspace = true
version = "0.0.0"
authors.workspace = true
repository.workspace = true

[lib]
name = "bridge_rpc_services"
path = "src/lib.rs"
[features]
default = ["enable-tracing"]
enable-tracing = ["dep:tracing", "trace/enabled"]

[dependencies]
eyre = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
trace = { workspace = true }
tracing = { workspace = true, optional = true }
log = { workspace = true }
bon = { workspace = true }
derive-new = { workspace = true }
bridge_rpc_core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bridge_rpc_utils = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
tokio = { workspace = true }
